<resources>
    <string name="app_name">Treasure</string>
    <string name="action_mode">Mode</string>

    <string name="activity_main">Treasure</string>
    <string name="activity_collapsing_toolbar">CollapsingToolbar</string>
    <string name="activity_dialog">Dialog</string>
    <string name="activity_view">View</string>
    <string name="activity_recycler_view">RecyclerView</string>
    <string name="activity_action_mode">ActionMode</string>
    <string name="activity_handwriting">Handwriting</string>
    <string name="activity_speech">Speech</string>
    <string name="activity_chart">Chart</string>
    <string name="activity_rxjava">RxJava搜索联想</string>
    <string name="activity_transition">Transition</string>
    <string name="activity_pre_layout">Pre Layout TextView</string>
    <string name="activity_pre_layout_recycler_view">Pre Layout RecyclerView</string>

    <string name="speech_language_others"><![CDATA[<font color=\"#999999\">%1$s</font> <font color=\"#ebebeb\">/</font> <font color=\"#333333\">%2$s</font>]]></string>
    <string name="label_holder">We challenged ourselves to create a visual language for our users that synthesizes the classic principles of good design with the innovation and possibility of technology and science. This is material design. This spec is a living document that will be updated as we continue to develop the tenets and specifics of material design.</string>

    <string name="app_description">A sample application that allows you to navigate a simple line graph using touch gestures.</string>
    <string name="action_zoom_in">Demo zoom in</string>
    <string name="action_zoom_out">Demo zoom out</string>
    <string name="action_pan_left">Demo pan left</string>
    <string name="action_pan_right">Demo pan right</string>
    <string name="action_pan_up">Demo pan up</string>
    <string name="action_pan_down">Demo pan down</string>

</resources>
